--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -37,11 +37,14 @@
     a {
         color: black;
         text-decoration: none;
-        padding: 0 2rem;
         border-radius: 5px;
 
         &:hover {
             background-color: #bfaffd;
+        }
+
+        @include mq.set-breakpoint('medium') {
+            padding: 0 2rem;
         }
     }
 }
